# idris-vba

./: .gitignore  README.md  idris-vba.cabal
examples/: Makefile  Socket.idr  Util.idr  VBA.idr  pythag.bas  pythag.idr  webcloud.bas  webcloud.idr
examples/VBA/: Base.idr  Excel.idr  Except.idr  Memory.idr  Socket.idr
src/: Main.hs
src/IRTS/: CodegenVBA.hs
