name:          idris-vba
version:       0.1.0.0
license:       BSD3
license-file:  CRAPL-LICENSE.txt
author:        Jacob Stanley
maintainer:	   Jacob Stanley <jacob@stanley.io>
build-type:	   Simple
cabal-version: >= 1.8

extra-source-files:
  vba-rts/*.vba

Executable idris-vba
  main-is: Main.hs
  hs-source-dirs: src

  build-depends:
      idris
    , base
    , containers
    , directory
    , filepath
    , haskeline >= 0.7
    , mtl
    , transformers

  other-modules: IRTS.CodegenVBA

  if os(linux)
     cpp-options:   -DLINUX
     build-depends: unix < 2.8
  if os(freebsd)
     cpp-options:   -DFREEBSD
     build-depends: unix < 2.8
  if os(dragonfly)
     cpp-options:   -DDRAGONFLY
     build-depends: unix < 2.8
  if os(darwin)
     cpp-options:   -DMACOSX
     build-depends: unix < 2.8
  if os(windows)
     cpp-options:   -DWINDOWS
     build-depends: Win32 < 2.4

  ghc-prof-options: -auto-all -caf-all
  ghc-options:      -threaded -rtsopts -funbox-strict-fields


